--- a/main.html
+++ b/main.html
@@ -3,11 +3,23 @@
 <html>
 
 <head>
+	<title>Shopping or Holiday</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h2> Shopping list </h2>
+	<ol>
+		<li data-ns-test="shoppinglist"> New watch </li>
+		<li data-ns-test="shoppinglist"> New laptop </li>
+		<li data-ns-test="shoppinglist"> New mobile</li>
+	</ol>
+	<h2> holiday list</h2>
+	 <ol>
+    <li data-ns-test="holidayList">Bora Bora</li>
+    <li data-ns-test="holidayList">Santorini</li>
+    <li data-ns-test="holidayList">Kyoto</li>
+  </ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
