--- a/main.html
+++ b/main.html
@@ -10,16 +10,16 @@
 <body>
 	<h2> Shopping list </h2>
 	<ol>
-		<li data-ns-test="shoppinglist"> New watch </li>
 		<li data-ns-test="shoppinglist"> New laptop </li>
-		<li data-ns-test="shoppinglist"> New mobile</li>
+		<li data-ns-test="shoppinglist">Gaming console </li>
+		<li data-ns-test="shoppinglist"> Designer watch</li>
 	</ol>
 	<h2> holiday list</h2>
-	 <ol>
+	 <ul>
     <li data-ns-test="holidayList">Bora Bora</li>
     <li data-ns-test="holidayList">Santorini</li>
     <li data-ns-test="holidayList">Kyoto</li>
-  </ol>
+  </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
