--- a/main.html
+++ b/main.html
@@ -10,19 +10,17 @@
 <body>
 	<h2> Shopping list </h2>
 	<ol>
-		<li data-ns-test="shoppinglist"> New laptop </li>
-		<li data-ns-test="shoppinglist">Gaming console </li>
-		<li data-ns-test="shoppinglist"> Designer watch</li>
+		<li data-ns-test='shoppingList'> New laptop </li>
+		<li data-ns-test='shoppingList'>Gaming console </li>
+		<li data-ns-test='shoppingList'> Designer watch</li>
 	</ol>
 	<h2> holiday list</h2>
 	 <ul>
-    <li data-ns-test="holidayList">Bora Bora</li>
-    <li data-ns-test="holidayList">Santorini</li>
-    <li data-ns-test="holidayList">Kyoto</li>
+    <li data-ns-test='holidayList'>Bora Bora</li>
+    <li data-ns-test='holidayList'>Santorini</li>
+    <li data-ns-test='holidayList'>Kyoto</li>
   </ul>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+   
 </body>
 
 </html>
